# AnimeEffects

./: CMakeLists.txt
src/core/: CMakeLists.txt  DestinationTexturizer.cpp  LayerNode.cpp  MeshTransformer.cpp  MeshTransformer.h  MeshTransformerResource.cpp  MeshTransformerResource.h  ShaderHolder.cpp
src/ctrl/: CMakeLists.txt  FFDEditor.cpp
src/ctrl/ffd/: ffd_TaskResource.cpp  ffd_TaskResource.h
src/gui/: CMakeLists.txt  GeneralSettingDialog.cpp  LocaleDecider.cpp  MainMenuBar.cpp
